<resources>
    <string name="app_name">Assignment</string>
    <string name="SkinAge">skin AGE</string>
    <string name="SkinCare">SKinage</string>
    <string name="description1">description</string>
    <string name="description2">description2</string>
    <string name="FacialTutorial">facialtutorial</string>
    <string name="SkinType">Skintype</string>
    <string name="FacialTutorial1">facialtutorial1</string>
    <string name="description3">description</string>
    <string name="facialtutorail">facialtutorial</string>
    <string name="textViewMorning">textviewmorning</string>
    <string name="TextVIEWNGT">night</string>
    <string name="product">product</string>
    <string name="LabelSr">label</string>
    <string name="night">night</string>
    <string name="morning">morning</string>
    <string name="your_skincare_routine_recommendations_is_available_at_below_please_tap_to_see_the_routines_to_have_glowing_skin">content</string>
    <string name="SkinRoutine1">slinroutine</string>
    <string name="description6">TODO</string>
    <string name="clickhere">Click</string>
    <string name="Morning">morning</string>
    <string name="step1">Step 1: Start With A Cleansing Oil</string>
    <string name="Step1">step1</string>
    <string name="textview">TextView</string>
    <string name="Step2">Step 1: Start With A Cleansing Oil</string>
    <string name="sds">steojhkhjgdbasjxb</string>
    <string name="textview1">Step 1: Start With A Cleansing Oil</string>
    <string name="textView2">Step 2: Follow-Up With A Water-Based Cleanser</string>
    <string name="textview3">Step 3: Use A Toner</string>
    <string name="textView4">Step 4: Don’t Forget The Serum</string>
    <string name="textview5">Step 5: Moisturize Well</string>
    <string name="textview6">Step 5: Moisturize Well</string>
    <string name="textview7">Step 6: Apply Sunscreen To Your Face</string>
    <string name="textview8">Step 7: Protect With An Eye Cream</string>
    <string name="textview9">Step 8: Prime It Up</string>

    <string name="textViewNstep1">Step 1: Cleanse</string>
    <string name="textViewNstep2">Step 2: Treat</string>
    <string name="textViewNstep3">Step 3: Hydrate</string>
    <string name="textViewNstep4">Step 4: Moisturize</string>
    <string name="Button1">Normal Skin</string>
    <string name="button2">Oily Skin</string>
    <string name="heading">What?</string>
    <string name="heading1">What \'s Your Skin Type?</string>

    <string name="headingSkinType">Identify Your Skin Type ?</string>
    <string name="headingF">Facial Tutorial</string>
    <string name="CONTENT">This apps provide the best face care key points for healthier and beautiful face. These are all Natural face protection tips and valuable home treatment  for a healthy face, daily face tips also for dark circles and hygienic remedies. Face Treatment is basically a face care tutorial gallery where everyone can learn how to take care of their face, how to look fresh to get younger face, to remove dark circle, how to remove tan, about pigmentation and much more. After watching these tips and a guide to good nutrition you will learn how to treat your face in any season and it also saves your money by keeping you out from doctors. Although it is not possible to recover the baby like skin, but by making certain lifestyle changes, using skin toning products, consulting a dermatologist you can attain a younger look and improve your skin texture and tone. In this app, you will find some very useful tips and less harsh, natural methods to help you to even out skin complexion. This app explains some simple and easy to follow facial tips for all.  There are lists of natural ingredients that tone up your skin along with giving you stunning look. Just download this app and see all secretes of natural facial.  Here\'s a sneak-peak of the content you will be getting inside this app:  Naturally homemade face packs and masks have been popular from ages for face. Aside from helping achieve fairness, there are a number of face packs available for solving problems like skin irritations, skin darkening, uneven skin tone, lack of glow, tanning and many more. We indulge in so many expensive and chemical containing procedures like skin peeling, chemical packs and facials yet Mother Nature has gifted us with all the necessary ingredients we need for these beauty and facial treatments. The Basic Steps of a Facial The human face is a body part that makes the whole body attractive. Face are the way of expressing your thoughts. In a human body face are known as the most beautiful part. There are different kind of skin. Some people has dry skin, some has oily or sensitive and all types of skin has different skin tips and treatments. It is always a concerned for many people about how to make their face younger and healthier. Just stop concerning and try out the simple steps of home remedies in our face tips apps.  Considering how essential your skin is, caring for your face should be a part of your daily regimen.  Acquire knowledge of more about taking care of your face.  Protect your face from ultraviolet ray and pollution with these points for face healthy, way of living, and precautionary protection.  Face preservation and face care tips to get beautiful and glowing face. Even if you are blessed with beautiful, taking care of and protecting your face.   This face care app is special as it also gives you a lot of tips for dark circles with a daily prompt to try out natural facial to get a natural beautiful or experience  the beauty magical face.</string>
    <string name="content1">This apps provide the best face care key points for healthier and beautiful face. These are all Natural face protection tips and valuable home treatment  for a healthy face, daily face tips also for dark circles and hygienic remedies. Face Treatment is basically a face care tutorial gallery where everyone can learn how to take care of their face, how to look fresh to get younger face, to remove dark circle, how to remove tan, about pigmentation and much more. After watching these tips and a guide to good nutrition you will learn how to treat your face in any season and it also saves your money by keeping you out from doctors. Although it is not possible to recover the baby like skin, but by making certain lifestyle changes, using skin toning products, consulting a dermatologist you can attain a younger look and improve your skin texture and tone. In this app, you will find some very useful tips and less harsh, natural methods to help you to even out skin complexion.  This app explains some simple and easy to follow facial tips for all.</string>
    <string name="todo">TODO</string>
    <string name="content2">Please click to the button to watch effective facial tutorials.</string>
    <string name="newtext">Facial Tutorial</string>
    <string name="button1">Add To Card</string>
    <string name="button1new">Add to Cart</string>
    <string name="buttone3">Remove Item</string>
    <string name="AddToCartButton">Add To Cart</string>
    <string name="BuyNow">Buy Now</string>
    <string name="product1">Smart Custom Repair Concentrate Serum</string>
    <string name="newContent">Smart Custom Repair Concentrate Serum RM67.00</string>
    <string name="content">Bienfait Multi-Vital Daily Oil RM80.00</string>
    <string name="Button2">Buy Now</string>
    <string name="contentoo">Metacell Renewal B3 RM100.00</string>
    <string name="button">Button</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="tod5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="headingSkinCare">Skin Care</string>
    <string name="haeding">Skin Care</string>
    <string name="textviewnew">Skin Routine</string>
    <string name="headingSkinProduct">Skin Product</string>
    <string name="heading12">Skin Type</string>
    <string name="Heading123">Facial Tutorial</string>
    <string name="heading1244">Skin Routine</string>
    <string name="Content1">Your Skin routine recoomendations is available at below .Please tap to see the routines to have glowing and smooth skin.</string>
    <string name="hello">For more clear instruction .Please  click here</string>
    <string name="imag1">image1</string>
    <string name="image2">image2</string>
    <string name="imga3">image3</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="text">Please click to the image to know more about your skin.</string>
    <string name="HeadingNew">Product</string>
    <string name="heading4">BIO-ESSENCE 24K BG Gold Rose Water 30ml RM15.33</string>
    <string name="heading5">WILDFERNS Manuka Honey Refining Facial Scrub 100ml RM60.94</string>
    <string name="heading6">WILDFERNS Manuka Honey Refining Facial Scrub 100ml RM60.94</string>
    <string name="add">Add To Cart</string>
    <string name="buy1">Buy Now</string>
    <string name="Add2">Add To Cart</string>
    <string name="buy2">Buy Now</string>
    <string name="Add3">Add To Cart</string>
    <string name="buy3">Buy Now</string>
    <string name="submit" />
    <string name="phone_number">phone number</string>
    <string name="skin">Normal Skin</string>
    <string name="contentn">‘Normal’ is a term widely used to refer to well-balanced skin. The scientific term for well-balanced skin is eudermic. The T-zone (forehead, chin and nose) may be a bit oily, but overall sebum and moisture is balanced and the skin is neither too oily nor too dry.</string>
    <string name="contentnn">Sensitive skin types may exhibit the characteristics of dry skin, oily skin, or combination skin, but they also deal with a great amount of redness and irritation. Normal skin types may also have sensitive skin, but these generally don’t overlap. Sensitive skin types can be caused by skin conditions like rosacea or allergies, so it’s best to avoid harsh chemical-based skincare treatments. This skin type is also easily inflamed, so it’s important to choose the right natural skin care for sensitive skin to avoid any adverse reactions.</string>
    <string name="contentww">Sensitive Skin</string>
    <string name="newtextView">Dry Skin</string>
    <string name="NEWcONTENT">If you have dry skin, you may feel a tightness in your skin. There may also be scaly patches or flaking. Those with dry skin types generally have almost invisible pores, and may suffer from premature wrinkles and regular irritation to the skin.</string>
    <string name="hEADER">Oily Skin</string>
    <string name="contentAgain">Those with oily skin tend to notice a great deal of shine on their face, and may deal with terrible acne breakouts.</string>
    <string name="combine">Combination Skin</string>
    <string name="Contentcom">Combination skin features two or more different skin types on the face. Combination skin types typically experience dry and flaky skin on certain portions of the face, and excessive oil on others. Many mistakenly believe they have oily skin when they, in fact, have combination skin type. Unless an individual’s skin is oily all over, there are likely portions of skin that are dry or normal, which would qualify under combination skin.</string>
    <string name="todo123">android</string>
    <string name="name">Name</string>
    <string name="phoe">phone Number</string>
    <string name="address">Address</string>
    <string name="store" />
    <string name="store1">Store</string>
    <string name="show">Show</string>
</resources>
